# cg_project

./: CMakeLists.txt  build_macos.sh  build_windows.bat  readme.md  实验报告.md
include/glad/: glad.h
shader/: default_fragment_shader.fs  default_vertex_shader.vs  normal_fragment_shader.fs  normal_vertex_shader.vs  phone_fragment_shader.fs  phone_vertex_shader.vs  point_shadow_fragment_shader.fs  point_shadow_vertex_shader.vs  shadow_fragment_shader.fs  shadow_vertex_shader.vs
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  glad.c  main.cpp
src/light/: DirectionalLight.h  Light.h  PointLight.h
src/material/: Material.h  PhoneMaterial.cpp  PhoneMaterial.h  PureColorMaterial.cpp  PureColorMaterial.h  TexturedPhoneMaterial.cpp  TexturedPhoneMaterial.h
src/object/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
src/texture/: Texture.cpp  Texture.h
src/tool/: Line.cpp  Line.h  Point.cpp  Point.h
